## 3.3.0

- New: Product choose page after barcode scan now has really useful copy option for products (#636)
- New: Recipe details are now displayed on a separate page, not a bottom sheet anymore
- New: Recipes and stock overview page now have checkbox options for all additional fields (#663)
- New: Shopping pages now also has checkbox options for fields and picture (#663, #671, #710)
- New: Shopping mode options are now reachable through shopping mode menu and removed from settings
- Improved: Database exceptions are now caught and displayed (#698)
- Improved: Pictures in recipe or product descriptions now can be up to 10MB large (#698)
- Improved: Other design for recipe page
- Improved: Keyboard is displayed more reliably and quickly
- Improved: Form focus on master object pages & fixed plural field for English on QU page
- Improved: "Create recipe" page and "Create product" page now use "save and not close" buttons
- Improved: Description editor page now has bottom padding (still needs improvements with keyboard)
- Improved: Language picker works more reliably with demo domain change
- Improved: Shopping mode grouping option now can be set separately from shopping list page
- Improved: New grid layout on recipe page is default now
- Fixed: Crash on startup with Android Lollipop (and maybe higher)
- Fixed: Prevent crash when opening qu conversion page (#708)
- Fixed: Glitch with large top margin on recipe grid layout (#696)
- Fixed: Saving QU conversion failed if conversion existed already in other product (#707, #682)
- Fixed: Disabled features with Home Assistant add-on were not disabled in app (#713)
- Fixed: On product creation with prefilled name there was a plus instead of space character

## 3.2.1

- Fixed: Random crash with no reason (#699)
- Fixed: Prevent another crash after reopening app from background (#697)
- Fixed: Product pictures not loading (with Home Assistant or not, we don't know) (#700)