@@ -21,25 +21,42 @@
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   xmlns:app="http://schemas.android.com/apk/res-auto"
-  android:id="@+id/linear_master_edit_selection_container"
-  style="@style/Widget.Grocy.LinearLayout.ListItem.SingleLine.Clickable.More"
-  android:animateLayoutChanges="true">
+  android:layout_width="match_parent"
+  android:layout_height="wrap_content"
+  android:orientation="horizontal"
+  android:gravity="center_vertical">
 
-  <ImageView
-    android:id="@+id/image_master_edit_selection_selected"
-    style="@style/Widget.Grocy.ImageView.Icon"
-    android:src="@drawable/ic_round_check_circle"
-    android:visibility="invisible"
-    tools:ignore="ContentDescription"
-    android:layout_marginEnd="16dp"
-    app:tint="?attr/colorPrimary" />
-
-  <TextView
-    android:id="@+id/text_master_edit_selection_name"
-    style="@style/Widget.Grocy.TextView.ListItem.Title"
+  <LinearLayout
+    android:id="@+id/linear_master_edit_selection_container"
+    style="@style/Widget.Grocy.LinearLayout.ListItem.SingleLine.Clickable.More"
+    android:animateLayoutChanges="true"
     android:layout_width="0dp"
+    android:layout_weight="1">
+
+    <ImageView
+      android:id="@+id/image_master_edit_selection_selected"
+      style="@style/Widget.Grocy.ImageView.Icon"
+      android:src="@drawable/ic_round_check_circle"
+      android:visibility="invisible"
+      tools:ignore="ContentDescription"
+      android:layout_marginEnd="16dp"
+      app:tint="?attr/colorPrimary" />
+
+    <TextView
+      android:id="@+id/text_master_edit_selection_name"
+      style="@style/Widget.Grocy.TextView.ListItem.Title"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:singleLine="false" />
+
+  </LinearLayout>
+
+  <com.google.android.material.button.MaterialButton
+    style="@style/Widget.Grocy.Button.IconButton"
+    android:id="@+id/button_pin"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_weight="1"
-    android:singleLine="false" />
+    android:layout_marginEnd="8dp"
+    app:icon="@drawable/ic_round_push_pin" />
 
 </LinearLayout>
