@@ -1,6 +1,7 @@
 ## 3.3.0
 
 - New: Product choose page after barcode scan now has really useful copy option for products (#636)
+- New: On purchase page, store now can be pinned (always initially selected in session) (#525)
 - New: Recipe details are now displayed on a separate page, not a bottom sheet anymore
 - New: Recipes and stock overview page now have checkbox options for all additional fields (#663)
 - New: Shopping pages now also has checkbox options for fields and picture (#663, #671, #710)
